# jus_listen

./: .env.example  .gitignore  PRD.md  PROJECT_OVERVIEW.md  README.md  TECHSTACK.md  TODO.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: auth.py  browse.py  lyrics.py  playlist.py  search.py  stream.py  user.py
backend/app/db/: session.py
backend/app/models/: base.py
backend/app/services/: __init__.py  cache_service.py  ytdlp_service.py  ytmusic_service.py
frontend/: Dockerfile  Dockerfile.dev  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/album/[id]/: page.tsx
frontend/src/app/artist/[id]/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/liked/: page.tsx
frontend/src/app/playlist/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/song/[id]/: page.tsx
frontend/src/components/layout/: NowPlayingBar.tsx  Sidebar.tsx
frontend/src/components/player/: FullscreenPlayer.tsx  LyricsPanel.tsx  QueuePanel.tsx  SongCard.tsx
frontend/src/components/providers/: PlayerProvider.tsx
frontend/src/components/ui/: Slider.tsx
frontend/src/lib/: utils.ts
frontend/src/lib/audio/: audioEngine.ts  useAudioPlayer.ts
frontend/src/stores/: playerStore.ts  uiStore.ts
frontend/src/types/: index.ts
nginx/: nginx.conf  nginx.dev.conf
